--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.5",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
   },
